--- a/compare_body.htm
+++ b/compare_body.htm
@@ -1,47 +1,15 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<title>Compare Achievements</title>
+	
 	<link href="compare_achievements.css" media="all" rel="Stylesheet" type="text/css" />
 	
 	<script src="prototype.js" type="text/javascript"></script>
 	<script src="effects.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	
-		var isAnimating = false;
-		var animationDuration = 0.4;
+	<script src="compare_achievements.js" type="text/javascript"></script>
 
-		function load_details(game_id, row_id) {
-			replace_id = "details_" + row_id;
-			if (!isAnimating) {
-				isAnimating = true;
-				$("game_" + row_id).toggleClassName("achievements_open");
-				if( !$(replace_id).visible() ) {
-					if( $(replace_id).innerHTML == "" ) {
-						achievements_source = XBCompareAchievements.webViewAchievementDetails_(game_id);
-						achievements_source = achievements_source + "<div class=\"closer\" onclick=\"load_details('"+game_id+"', '"+row_id+"');location.hash = 'anchor_"+game_id+"'\"><img src='up_chevron.png' /></div>";
-						$(replace_id).innerHTML = achievements_source;
-					}
-					new Effect.Opacity(replace_id, { duration:animationDuration, from:0.0, to:1.0});
-					new Effect.BlindDown(replace_id, {duration:animationDuration,  afterFinish: enable_animation});
-					$("game_" + row_id).getElementsByClassName("disclosure")[0].hide();
-					$("game_" + row_id).getElementsByClassName("disclosure_up")[0].show();
-				}
-				else {
-					new Effect.Opacity(replace_id, { duration:animationDuration, from:1.0, to:0.0});
-					new Effect.BlindUp(replace_id, {duration:animationDuration,  afterFinish: enable_animation});
-					$("game_" + row_id).getElementsByClassName("disclosure")[0].show();
-					$("game_" + row_id).getElementsByClassName("disclosure_up")[0].hide();
-
-				}
-				
-			}
-		}
-		
-		
-		function enable_animation() {
-			isAnimating = false;
-		}
-	</script>
 </head>
 <body>
 
@@ -50,7 +18,7 @@
 			<td class="padding3">&nbsp;</td>
             <td class="padding">&nbsp;</td>
 			<td class="them_label">$their_tag</td>
-			<td class="me_label">Me</td>
+			<td class="me_label" id="debug">Me</td>
 			<td class="padding2">&nbsp;</td>
 		</tr></table>
 	</div>
